Format with google-java-format (#410)
* Format all java files

* Enforce format in CI/CD

* Remove all formatter directives

* Update readme

* Change format to AOSP for backwards compatibility

* Format last file