@@ -1,18 +1,18 @@
 package no.ssb.klass.core.service;
 
-import java.math.BigInteger;
-import java.util.List;
-import java.util.Optional;
-import java.util.Set;
-import java.util.stream.Collectors;
+import no.ssb.klass.core.model.User;
+import no.ssb.klass.core.repository.UserRepository;
 
 import org.hibernate.Hibernate;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import no.ssb.klass.core.model.User;
-import no.ssb.klass.core.repository.UserRepository;
+import java.math.BigInteger;
+import java.util.List;
+import java.util.Optional;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
@@ -34,7 +34,7 @@ public class UserServiceImpl implements UserService {
     public List<User> getAllUsers() {
         return userRepository.findAll();
     }
-    
+
     @Override
     public long getUsersCount() {
         return userRepository.count();
@@ -48,10 +48,11 @@ public class UserServiceImpl implements UserService {
     @Override
     public List<User> getUsersWithClassifications() {
         Set<BigInteger> userIds = userRepository.getUserIdsForUsersWithClassifications();
-        List<Long> collect = userIds.stream().map(bigInteger -> bigInteger.longValueExact()).collect(Collectors
-                .toList());
+        List<Long> collect =
+                userIds.stream()
+                        .map(bigInteger -> bigInteger.longValueExact())
+                        .collect(Collectors.toList());
         return userRepository.findAllById(collect);
-
     }
 
     @Override
